# ds_driva

./: desafio.ipynb  main.py  pyproject.toml
.agents/skills/: SKILL.md
.agents/workflows/: pipeline.md
scripts/: 00_eda_shapes.py  01_eda_target.py  02_eda_joins.py  03_eda_numerics.py  04_eda_text.py  05_eda_categoricals.py  10_features.py  20_train_lgbm.py  21_train_catboost.py  26_ensemble.py  30_evaluate.py  utils.py
scripts/results/: CHANGELOG.md  catboost_best.pkl  comparison.md  experiments.json  features_test.parquet  features_train.parquet  lgbm_best.pkl  selected_features.txt
